style corrected for top menu bar to be shown properly on small devices

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -288,7 +288,7 @@ body {
 div#header_container {
   /*position: fixed;*/
   top: 0;
-  height: 50px;
+  /*height: 50px;*/
   width: 100%;
   z-index: 1;
 }
